[gd_scene load_steps=67 format=3 uid="uid://x1o1wk70v2m2"]

[ext_resource type="Script" path="res://Scripts/UI/TrainStation.gd" id="1_0bs67"]
[ext_resource type="Texture2D" uid="uid://bj04heno632qt" path="res://Sprites/UI/TrainStation.png" id="1_sqds7"]
[ext_resource type="Texture2D" uid="uid://hyelhyelyqkb" path="res://Sprites/UI/TrainStationCharacters/TrainStationMia.png" id="3_0h4a0"]
[ext_resource type="Script" path="res://Scripts/UI/StationCharacter.gd" id="3_43vew"]
[ext_resource type="Texture2D" uid="uid://11vpmy4sj5kf" path="res://Sprites/UI/TrainStationCharacters/TrainStationNinjaBoy.png" id="5_jblpy"]
[ext_resource type="Shader" path="res://Shaders/grayscale.gdshader" id="5_ld84e"]
[ext_resource type="PackedScene" uid="uid://vspn7m7psh1b" path="res://Scenes/UI/tv_screen.tscn" id="5_trwgm"]
[ext_resource type="Theme" uid="uid://dgi4mcucy7t8i" path="res://Themes/MenuTheme.tres" id="6_p5b7c"]
[ext_resource type="FontFile" uid="uid://8m065evukno3" path="res://Fonts/NbPixelFontBundle/KarenFat.ttf" id="7_8yrdk"]
[ext_resource type="Texture2D" uid="uid://dewabgrwxpdd4" path="res://Sprites/UI/LargeArrow.png" id="8_h8tio"]
[ext_resource type="Texture2D" uid="uid://c378q8gnl3k4a" path="res://Sprites/Abilities/DefaultPlayerBombSprite.png" id="9_35su8"]
[ext_resource type="LabelSettings" uid="uid://daa5r56181nc" path="res://Themes/ShadowTextLabelSettings.tres" id="10_8whjf"]
[ext_resource type="FontFile" uid="uid://dgt6a3k16a4a0" path="res://Fonts/NbPixelFontBundle/Habbo.ttf" id="10_xkr3a"]
[ext_resource type="Texture2D" uid="uid://cdg5pjvsn3wxb" path="res://Sprites/UI/DefaultPlayerRollIcon.png" id="11_0oue1"]
[ext_resource type="AudioStream" uid="uid://brf5x7nv0jsif" path="res://Audio/SoundEffects/UI/ButtonPressedSound.wav" id="12_6nr1m"]
[ext_resource type="Texture2D" uid="uid://sr4oyeu10ndm" path="res://Sprites/UI/InGameSoulSlot.png" id="14_vltxm"]
[ext_resource type="Texture2D" uid="uid://ciqtl1jqanxv2" path="res://Sprites/UI/SoulIcon.png" id="15_uv58j"]
[ext_resource type="Texture2D" uid="uid://ce2pje7vjrxwr" path="res://Sprites/UI/StationPointerArrow.png" id="17_rpduu"]
[ext_resource type="AudioStream" uid="uid://cf6njxnljlfbr" path="res://Audio/Ambience/TrainStationAmbience.wav" id="18_aqf43"]
[ext_resource type="AudioStream" uid="uid://b7x2d6jukxjhm" path="res://Audio/SoundEffects/UI/CharacterUnlockedSound.wav" id="20_iclmu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_r66gy"]
atlas = ExtResource("17_rpduu")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6rd5"]
atlas = ExtResource("17_rpduu")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_spfa5"]
atlas = ExtResource("17_rpduu")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sdruy"]
atlas = ExtResource("17_rpduu")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i86de"]
atlas = ExtResource("17_rpduu")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t01yp"]
atlas = ExtResource("17_rpduu")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4opb"]
atlas = ExtResource("17_rpduu")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_asrt7"]
atlas = ExtResource("17_rpduu")
region = Rect2(448, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_4obvq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r66gy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6rd5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_spfa5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sdruy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i86de")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t01yp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4opb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_asrt7")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1kyd4"]
shader = ExtResource("5_ld84e")
shader_parameter/strength = null

[sub_resource type="AtlasTexture" id="AtlasTexture_7no4p"]
atlas = ExtResource("3_0h4a0")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7854h"]
atlas = ExtResource("3_0h4a0")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ltwet"]
atlas = ExtResource("3_0h4a0")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_825bi"]
atlas = ExtResource("3_0h4a0")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgmsm"]
atlas = ExtResource("3_0h4a0")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eha0a"]
atlas = ExtResource("3_0h4a0")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jgm4i"]
atlas = ExtResource("3_0h4a0")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0nufx"]
atlas = ExtResource("3_0h4a0")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yls3t"]
atlas = ExtResource("3_0h4a0")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7dhx"]
atlas = ExtResource("3_0h4a0")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2xiid"]
atlas = ExtResource("3_0h4a0")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xtuul"]
atlas = ExtResource("3_0h4a0")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lw00t"]
atlas = ExtResource("3_0h4a0")
region = Rect2(768, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujl37"]
atlas = ExtResource("3_0h4a0")
region = Rect2(832, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5opm8"]
atlas = ExtResource("3_0h4a0")
region = Rect2(896, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pj8bc"]
atlas = ExtResource("3_0h4a0")
region = Rect2(960, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_8xcj0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7no4p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7854h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ltwet")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_825bi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgmsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eha0a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jgm4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0nufx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yls3t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7dhx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2xiid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xtuul")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lw00t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujl37")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5opm8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pj8bc")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wyn75"]
shader = ExtResource("5_ld84e")
shader_parameter/strength = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_ircq2"]
atlas = ExtResource("5_jblpy")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2yg00"]
atlas = ExtResource("5_jblpy")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdkep"]
atlas = ExtResource("5_jblpy")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7o0ll"]
atlas = ExtResource("5_jblpy")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uvgb2"]
atlas = ExtResource("5_jblpy")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mhyh3"]
atlas = ExtResource("5_jblpy")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kem61"]
atlas = ExtResource("5_jblpy")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vppt8"]
atlas = ExtResource("5_jblpy")
region = Rect2(448, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_q2v3b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ircq2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2yg00")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rdkep")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7o0ll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uvgb2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mhyh3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kem61")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vppt8")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_pnyx5"]
font = ExtResource("7_8yrdk")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v6hcg"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.235294, 0.258824, 0.333333, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_detail = 1
anti_aliasing = false

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4vrn0"]
texture = ExtResource("8_h8tio")
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
modulate_color = Color(0.890196, 0.47451, 0.152941, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dy3q1"]
texture = ExtResource("8_h8tio")
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
modulate_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dk1do"]
texture = ExtResource("8_h8tio")
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qjexe"]
texture = ExtResource("8_h8tio")
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
modulate_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d4eug"]

[sub_resource type="LabelSettings" id="LabelSettings_lh85g"]
line_spacing = 0.0
font = ExtResource("10_xkr3a")
outline_size = 4
outline_color = Color(0, 0, 0, 1)
shadow_size = 2
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(0, 2)

[sub_resource type="LabelSettings" id="LabelSettings_u8yt5"]
font = ExtResource("7_8yrdk")

[node name="TrainStation" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0bs67")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_sqds7")
stretch_mode = 2

[node name="PointerArrow" type="AnimatedSprite2D" parent="."]
position = Vector2(280, 90)
sprite_frames = SubResource("SpriteFrames_4obvq")
autoplay = "default"

[node name="Characters" type="Node2D" parent="."]

[node name="Mia" type="AnimatedSprite2D" parent="Characters"]
material = SubResource("ShaderMaterial_1kyd4")
position = Vector2(283, 123)
sprite_frames = SubResource("SpriteFrames_8xcj0")
autoplay = "default"
script = ExtResource("3_43vew")

[node name="NinjaBoy" type="AnimatedSprite2D" parent="Characters"]
material = SubResource("ShaderMaterial_wyn75")
position = Vector2(317, 140)
sprite_frames = SubResource("SpriteFrames_q2v3b")
autoplay = "default"
frame = 2
frame_progress = 0.251664
script = ExtResource("3_43vew")

[node name="CharacterScreen" parent="." instance=ExtResource("5_trwgm")]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
offset_left = -145.0
offset_top = -144.0
offset_right = 145.0
offset_bottom = -15.0
grow_vertical = 0

[node name="Name" type="Label" parent="CharacterScreen"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 9.0
offset_bottom = 28.0
grow_horizontal = 2
theme = ExtResource("6_p5b7c")
text = "MIA"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="Label" parent="CharacterScreen"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 9.0
offset_top = -38.5
offset_right = -9.0
offset_bottom = 28.5
grow_horizontal = 2
grow_vertical = 2
text = "A character that does stuff. It's actually quite fun I would say"
label_settings = SubResource("LabelSettings_pnyx5")
horizontal_alignment = 1
autowrap_mode = 2

[node name="PlayButton" type="Button" parent="CharacterScreen"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = -36.0
offset_right = 143.0
offset_bottom = -12.0
grow_vertical = 0
theme = ExtResource("6_p5b7c")
text = "PLAY"

[node name="UnlockButton" type="Button" parent="CharacterScreen"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = -36.0
offset_right = 143.0
offset_bottom = -12.0
grow_vertical = 0
theme = ExtResource("6_p5b7c")
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_styles/disabled = SubResource("StyleBoxFlat_v6hcg")
text = "UNLOCK (1000)"

[node name="DetailsButton" type="Button" parent="CharacterScreen"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -143.0
offset_top = -36.0
offset_right = -12.0
offset_bottom = -12.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("6_p5b7c")
text = "DETAILS"

[node name="LeftButton" type="Button" parent="CharacterScreen"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -289.0
offset_top = -32.0
offset_right = -225.0
offset_bottom = 32.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(-1, 1)
theme_override_styles/normal = SubResource("StyleBoxTexture_4vrn0")
theme_override_styles/hover = SubResource("StyleBoxTexture_dy3q1")
theme_override_styles/pressed = SubResource("StyleBoxTexture_dk1do")
theme_override_styles/disabled = SubResource("StyleBoxTexture_qjexe")
theme_override_styles/focus = SubResource("StyleBoxEmpty_d4eug")

[node name="RightButton" type="Button" parent="CharacterScreen"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -1.0
offset_top = -32.0
offset_right = 63.0
offset_bottom = 32.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_4vrn0")
theme_override_styles/hover = SubResource("StyleBoxTexture_dy3q1")
theme_override_styles/pressed = SubResource("StyleBoxTexture_dk1do")
theme_override_styles/disabled = SubResource("StyleBoxTexture_qjexe")
theme_override_styles/focus = SubResource("StyleBoxEmpty_d4eug")

[node name="DetailsScreen" parent="." instance=ExtResource("5_trwgm")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -148.0
offset_right = 256.0
offset_bottom = 148.0

[node name="AbilityDisplay" type="VBoxContainer" parent="DetailsScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -124.0
offset_right = 240.0
offset_bottom = 124.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Ability1" type="HBoxContainer" parent="DetailsScreen/AbilityDisplay"]
custom_minimum_size = Vector2(0, 38)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="DetailsScreen/AbilityDisplay/Ability1"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
texture = ExtResource("9_35su8")
stretch_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="DetailsScreen/AbilityDisplay/Ability1"]
layout_mode = 2
theme_override_constants/separation = -5

[node name="Name" type="Label" parent="DetailsScreen/AbilityDisplay/Ability1/VBoxContainer"]
layout_mode = 2
theme = ExtResource("6_p5b7c")
text = "ABILITY 1: FREEZE GRENADE"
label_settings = ExtResource("10_8whjf")
vertical_alignment = 1
autowrap_mode = 2
uppercase = true

[node name="Description" type="Label" parent="DetailsScreen/AbilityDisplay/Ability1/VBoxContainer"]
custom_minimum_size = Vector2(428, 0)
layout_mode = 2
text = "Description, this is a description
"
label_settings = SubResource("LabelSettings_lh85g")
autowrap_mode = 2

[node name="Ability2" type="HBoxContainer" parent="DetailsScreen/AbilityDisplay"]
custom_minimum_size = Vector2(0, 38)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="DetailsScreen/AbilityDisplay/Ability2"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
texture = ExtResource("9_35su8")
stretch_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="DetailsScreen/AbilityDisplay/Ability2"]
layout_mode = 2
theme_override_constants/separation = -5

[node name="Name" type="Label" parent="DetailsScreen/AbilityDisplay/Ability2/VBoxContainer"]
layout_mode = 2
text = "ABILITY 2: FRAG BOMB"
label_settings = ExtResource("10_8whjf")
vertical_alignment = 1
autowrap_mode = 2
uppercase = true

[node name="Description" type="Label" parent="DetailsScreen/AbilityDisplay/Ability2/VBoxContainer"]
custom_minimum_size = Vector2(428, 0)
layout_mode = 2
text = "Description, this is a description
"
label_settings = SubResource("LabelSettings_lh85g")
autowrap_mode = 2

[node name="MovementAbility" type="HBoxContainer" parent="DetailsScreen/AbilityDisplay"]
custom_minimum_size = Vector2(0, 38)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="DetailsScreen/AbilityDisplay/MovementAbility"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
texture = ExtResource("11_0oue1")
stretch_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="DetailsScreen/AbilityDisplay/MovementAbility"]
layout_mode = 2
theme_override_constants/separation = -5

[node name="Name" type="Label" parent="DetailsScreen/AbilityDisplay/MovementAbility/VBoxContainer"]
layout_mode = 2
text = "MOVEMENT ABILITY: ROLL"
label_settings = ExtResource("10_8whjf")
vertical_alignment = 1
autowrap_mode = 2
uppercase = true

[node name="Description" type="Label" parent="DetailsScreen/AbilityDisplay/MovementAbility/VBoxContainer"]
custom_minimum_size = Vector2(428, 0)
layout_mode = 2
text = "Description, this is a description
"
label_settings = SubResource("LabelSettings_lh85g")
autowrap_mode = 2

[node name="Passive" type="HBoxContainer" parent="DetailsScreen/AbilityDisplay"]
custom_minimum_size = Vector2(0, 38)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="DetailsScreen/AbilityDisplay/Passive"]
layout_mode = 2
theme_override_constants/separation = -5

[node name="Name" type="Label" parent="DetailsScreen/AbilityDisplay/Passive/VBoxContainer"]
layout_mode = 2
text = "PASSIVE: MULTIKILLS"
label_settings = ExtResource("10_8whjf")
vertical_alignment = 1
autowrap_mode = 2
uppercase = true

[node name="Description" type="Label" parent="DetailsScreen/AbilityDisplay/Passive/VBoxContainer"]
custom_minimum_size = Vector2(480, 0)
layout_mode = 2
text = "Description, this is a description
"
label_settings = SubResource("LabelSettings_lh85g")
autowrap_mode = 2

[node name="PrimaryGun" type="HBoxContainer" parent="DetailsScreen/AbilityDisplay"]
custom_minimum_size = Vector2(0, 38)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="DetailsScreen/AbilityDisplay/PrimaryGun"]
layout_mode = 2
theme_override_constants/separation = -5

[node name="Name" type="Label" parent="DetailsScreen/AbilityDisplay/PrimaryGun/VBoxContainer"]
layout_mode = 2
text = "LEFT CLICK: SHOTGUN"
label_settings = ExtResource("10_8whjf")
vertical_alignment = 1
autowrap_mode = 2
uppercase = true

[node name="Description" type="Label" parent="DetailsScreen/AbilityDisplay/PrimaryGun/VBoxContainer"]
custom_minimum_size = Vector2(480, 0)
layout_mode = 2
text = "Description, this is a description
"
label_settings = SubResource("LabelSettings_lh85g")
autowrap_mode = 2

[node name="SecondaryGun" type="HBoxContainer" parent="DetailsScreen/AbilityDisplay"]
custom_minimum_size = Vector2(0, 38)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="DetailsScreen/AbilityDisplay/SecondaryGun"]
layout_mode = 2
theme_override_constants/separation = -5

[node name="Name" type="Label" parent="DetailsScreen/AbilityDisplay/SecondaryGun/VBoxContainer"]
layout_mode = 2
text = "RIGHT CLICK: SNIPER"
label_settings = ExtResource("10_8whjf")
vertical_alignment = 1
autowrap_mode = 2
uppercase = true

[node name="Description" type="Label" parent="DetailsScreen/AbilityDisplay/SecondaryGun/VBoxContainer"]
custom_minimum_size = Vector2(480, 0)
layout_mode = 2
text = "Description, this is a description
"
label_settings = SubResource("LabelSettings_lh85g")
autowrap_mode = 2

[node name="CloseDetailsButton" type="Button" parent="DetailsScreen"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -32.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 32.0
grow_horizontal = 0
theme = ExtResource("6_p5b7c")
text = "X"

[node name="UnlockConfirm" parent="." instance=ExtResource("5_trwgm")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -60.0
offset_right = 144.0
offset_bottom = 60.0

[node name="Label" type="Label" parent="UnlockConfirm"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 16.0
offset_top = 13.0
offset_right = -16.0
offset_bottom = 69.0
grow_horizontal = 2
text = "Do you want to spend 1000 souls to unlock [Boy dressed as a ninja]?"
label_settings = ExtResource("10_8whjf")
autowrap_mode = 2

[node name="UnlockConfirmButton" type="Button" parent="UnlockConfirm"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = -36.0
offset_right = 142.0
offset_bottom = -12.0
grow_vertical = 0
theme = ExtResource("6_p5b7c")
text = "I do!"

[node name="UnlockDenyButton" type="Button" parent="UnlockConfirm"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -140.0
offset_top = -36.0
offset_right = -10.0
offset_bottom = -12.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("6_p5b7c")
text = "Nah I'm good"

[node name="CongratulationsScreen" parent="." instance=ExtResource("5_trwgm")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -60.0
offset_right = 144.0
offset_bottom = 60.0

[node name="Label" type="Label" parent="CongratulationsScreen"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 16.0
offset_top = 13.0
offset_right = -16.0
offset_bottom = 69.0
grow_horizontal = 2
text = "Congratulations! You have successfully unlocked [character]"
label_settings = ExtResource("10_8whjf")
autowrap_mode = 2

[node name="UnlockDenyButton" type="Button" parent="CongratulationsScreen"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -65.0
offset_top = -36.0
offset_right = 65.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("6_p5b7c")
text = "CONFIRM"

[node name="SoulCounter" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -96.0
offset_bottom = 40.0
grow_horizontal = 0
texture = ExtResource("14_vltxm")
stretch_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="SoulCounter"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.0
offset_top = -20.0
offset_right = 48.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="SoulCounter/HBoxContainer"]
layout_mode = 2
text = "12805"
label_settings = SubResource("LabelSettings_u8yt5")
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="SoulCounter/HBoxContainer"]
custom_minimum_size = Vector2(11.695, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0
texture = ExtResource("15_uv58j")
expand_mode = 1
stretch_mode = 3

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 80.0
offset_bottom = 32.0
theme = ExtResource("6_p5b7c")
text = "BACK"

[node name="ButtonPressedPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_6nr1m")
bus = &"FX"

[node name="Ambience" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_aqf43")
bus = &"Ambience"

[node name="CharacterUnlockedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("20_iclmu")
bus = &"FX"

[connection signal="pressed" from="CharacterScreen/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CharacterScreen/UnlockButton" to="." method="_on_unlock_button_pressed"]
[connection signal="pressed" from="CharacterScreen/DetailsButton" to="." method="_on_details_button_pressed"]
[connection signal="pressed" from="CharacterScreen/LeftButton" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="CharacterScreen/RightButton" to="." method="_on_right_button_pressed"]
[connection signal="pressed" from="DetailsScreen/CloseDetailsButton" to="." method="_on_close_details_button_pressed"]
[connection signal="pressed" from="UnlockConfirm/UnlockConfirmButton" to="." method="_on_unlock_confirm_button_pressed"]
[connection signal="pressed" from="UnlockConfirm/UnlockDenyButton" to="." method="_on_unlock_deny_button_pressed"]
[connection signal="pressed" from="CongratulationsScreen/UnlockDenyButton" to="." method="_on_unlock_deny_button_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
